---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @func() {
entry:
  %func = alloca i16, align [filtered]
  %int_var = alloca i16, align [filtered]
  %arr_var = alloca [3 x i32], align [filtered]
  %ptr_var = alloca ptr, align [filtered]
  %float_var = alloca float, align [filtered]
  store i16 0, ptr %int_var, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %arr_var, i8 0, i64 ptrtoint (ptr getelementptr ([3 x i32], ptr null, i32 1) to i64), i1 false)
  store ptr null, ptr %ptr_var, align [filtered]
  store float 0.000000e+00, ptr %float_var, align [filtered]
  store i16 0, ptr %func, align [filtered]
  %func_ret = load i16, ptr %func, align [filtered]
  ret i16 %func_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
